--- a/index.html
+++ b/index.html
@@ -64,26 +64,25 @@
 
         <p id="mobileversion">
           <strong> Filtres </strong>
-          <div class="mobilerow">
-            <p>
-            <span>
-            <i class="fa solid fa-money-bill-wave"></i><a href="#"> Économique</a>
-            </span>
-            <span>
+        </p>
+
+        <div class="mobilerow">
+          <span>
+            <i class="fa solid fa-money-bill-wave"></i
+            ><a href="#"> Économique</a>
+          </span>
+          <span>
             <i class="fa solid fa-child"></i><a href="#">Familial</a>
-            </span>
-          </p>
-          </div>
-          <div class="mobilecolumn">
-          <p>
-            <span>
-              <i class="fa solid fa-heart"></i><a href="#">Romantique</a>
-            </span>
-            <span>
-              <i class="fa fa-dog"></i><a href="#">Animaux autorisés</a>
-            </span>
-          </p>
-          </div>
+          </span>
+        </div>
+        <div class="mobilecolumn">
+          <span>
+            <i class="fa solid fa-heart"></i><a href="#">Romantique</a>
+          </span>
+          <span>
+            <i class="fa fa-dog"></i><a href="#">Animaux autorisés</a>
+          </span>
+        </div>
 
         <div class="inf">
           <i id="info" class="fas fa-solid fa-info"></i>
