--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             alt="Reservia"
             id="logo"
           />
-          <br /><br />
+          <br />
           <nav class="headernav">
             <a class="ancre" href="#hébergements">Hébergements</a>
             <a class="ancre" href="#activités">Activités</a>
@@ -60,24 +60,23 @@
         </p> <br />
 
         <p id="mobileversion">
-          <strong> Filtres </strong>
+          <strong class="fil"> Filtres </strong>
         </p>
-
         <div class="mobilerow">
-          <span>
-            <i class="fa solid fa-money-bill-wave"></i
-            ><a href="#"> Économique</a>
+          <span class="filtre">
+            <i class="icône fa solid fa-money-bill-wave"></i
+            ><a class="filtrename" href="#"> Économique</a>
           </span>
-          <span>
-            <i class="fa solid fa-child"></i><a href="#">Familial</a>
+          <span class="filtre">
+            <i class=" icône fa solid fa-child"></i><a class="filtrename" href="#">Familial</a>
           </span>
         </div>
         <div class="mobilecolumn">
-          <span>
-            <i class="fa solid fa-heart"></i><a href="#">Romantique</a>
+          <span class="filtre">
+            <i class=" icône fa solid fa-heart"></i><a class="filtrename" href="#">Romantique</a>
           </span>
-          <span>
-            <i class="fa fa-dog"></i><a href="#">Animaux autorisés</a>
+          <span class="filtre">
+            <i class=" icône fa fa-dog"></i><a class="filtrename" href="#">Animaux autorisés</a>
           </span>
         </div>
 
@@ -89,6 +88,7 @@
       </header>
 
       <section>
+        <div class="hébergements">
         <article id="hébergements">
           <h3>Hébergements à Marseille</h3>
           <div class="héberg">
@@ -261,9 +261,11 @@
           </div>
         </aside>
         <br /><br />
+        </div>
       </section>
 
       <section>
+        <div class="activités">
         <h3 class="h3desktop">Activités à Marseille</h3>
         <br /><br />
         <article id="activités">
@@ -333,6 +335,7 @@
             <br />
           </aside>
         </article>
+        </div>
       </section>
 
       <footer>
@@ -342,7 +345,7 @@
           <a href="#">Conditions générales de vente</a><br /><br />
           <a href="#">Données et confidentialité</a><br />
         </div>
-        <div class="hébergements">
+        <div class="footerhébergements">
           <p><strong>Nos hébergements</strong></p>
           <a href="#">Charte qualité</a><br /><br />
           <a href="#">Soumettre votre hôtel</a><br />
