--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
       <section>
       <div class="hébergements">
         <article id="hébergements">
-          <h3>Hébergements à Marseille</h3>
+          <h2>Hébergements à Marseille</h2>
           <div class="héberg">
             <div class="hotel">
               <a href="#">
@@ -200,7 +200,7 @@
 
         <aside id="populaires">
           <div class="entete">
-            <h3>Les plus populaires</h3>
+            <h2>Les plus populaires</h2>
             <i class="fas fa-chart-line"></i>
           </div>
           <div class="populaire">
@@ -264,7 +264,7 @@
       </div>
       </section>
 
-      <section class="activity" id="activity">
+      <section class="activity">
         <h2 class="activityTitle">Activités à Marseille</h2>
         <a href="#" class="activityCard activityCard1">
           <div class="activityCardWrapimg">
@@ -348,3 +348,4 @@
       </footer>
   </body>
 </html>
+
