--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
           <br />
           <nav class="headernav">
             <a class="ancre" href="#hébergements">Hébergements</a>
-            <a class="ancre" href="#activités">Activités</a>
+            <a class="ancre" href="#activity">Activités</a>
           </nav>
           <a class="inscription" href="#">S'inscrire</a>
         </div>
@@ -264,7 +264,7 @@
       </div>
       </section>
 
-      <section class="activity">
+      <section class="activity" id="activity">
         <h2 class="activityTitle">Activités à Marseille</h2>
         <a href="#" class="activityCard activityCard1">
           <div class="activityCardWrapimg">
