--- a/Reservia.html
+++ b/Reservia.html
@@ -11,6 +11,7 @@
     <title>Reservia</title>
   </head>
 
+  <!--Header-->
   <body>
     <header>
       <div class="navigation">
@@ -556,7 +557,8 @@
         <h3 class="activityCardTitle">Parc Longchamp</h3>
       </a>
     </section>
-
+    
+    <!--Footer-->
     <footer>
       <div class="propos">
         <p><strong>A propos</strong></p>
