--- a/Index.html
+++ b/Index.html
@@ -3,7 +3,7 @@
 <html lang="fr">
   <head>
     <meta charset="UTF-8" />
-    <link rel="stylesheet" type="text/css" href="Reservia.css" />
+    <link rel="stylesheet" type="text/css" href="style.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script
       src="https://kit.fontawesome.com/ef7377b164.js"
@@ -66,7 +66,6 @@
         >
       </p>
       <br />
-
       <p id="mobileversion">
         <strong class="fil"> Filtres </strong>
       </p>
